--- a/settings-online.conf
+++ b/settings-online.conf
@@ -4,9 +4,6 @@
 modules-search: [ local ]
 
 instances:
-- id:       mkinitcpio
-  module:   shellprocess
-  config:   shellprocess_mkinitcpio.conf
 - id:       preuser
   module:   shellprocess
   config:   shellprocess_preuser.conf
@@ -26,7 +23,6 @@ sequence:
 - exec:
   - partition
   - mount
-  # - unpackfs
   - baseinstall
   - machineid
   - fstab
@@ -36,17 +32,15 @@ sequence:
   - networkcfg
   - luksopenswaphookcfg
   - luksbootkeyfile
-  # - shellprocess@mkinitcpio
   - initcpiocfg
   - initcpio
-  - shellprocess@settings
+  # - shellprocess@settings
   - packages
   - removeuser
-  # - shellprocess@preuser
+  - shellprocess@preuser
   - users
   - hwclock
-  # - services-systemd
-  # - shellprocess
+  - shellprocess
   - displaymanager
   - grubcfg
   - bootloader
