--- a/settings-online.conf
+++ b/settings-online.conf
@@ -33,7 +33,7 @@ sequence:
   - luksopenswaphookcfg
   - luksbootkeyfile
   - initcpiocfg
-  - initcpio
+  # - initcpio
   # - shellprocess@settings
   - packages
   - removeuser
