--- a/settings-online.conf
+++ b/settings-online.conf
@@ -33,8 +33,7 @@ sequence:
   - luksopenswaphookcfg
   - luksbootkeyfile
   - initcpiocfg
-  # - initcpio
-  # - shellprocess@settings
+  - shellprocess@settings
   - packages
   - removeuser
   - shellprocess@preuser
