--- a/src/modules/netinstall/netinstall.yaml
+++ b/src/modules/netinstall/netinstall.yaml
@@ -378,7 +378,7 @@
       - pamac-aur
       - gparted
       - firefox
-      - firefox-i18n-ru
+      - firefox-i18n-$LOCALE
       - firefox-ublock-origin
       - mpv
       - smplayer
