--- a/src/modules/netinstall/netinstall.conf
+++ b/src/modules/netinstall/netinstall.conf
@@ -12,7 +12,10 @@
 # The format of the groups file is documented in `README.md`.
 #
 # groupsUrl: file:///usr/share/calamares/modules/netinstall.yaml
-groupsUrl: https://raw.githubusercontent.com/ctlos/calamares/dev/src/modules/netinstall/netinstall.yaml
+groupsUrl:
+  - https://raw.githubusercontent.com/ctlos/ctlos_repo/master/x86_64/calamares-netinstall.yaml
+  - https://osdn.net/projects/ctlos/storage/ctlos_repo/x86_64/calamares-netinstall.yaml
+  - https://cvc.keybase.pub/ctlos_repo/calamares-netinstall.yaml
 
 # If the installation can proceed without netinstall (e.g. the Live CD
 # can create a working installed system, but netinstall is preferred
