--- a/settings-online.conf
+++ b/settings-online.conf
@@ -10,6 +10,9 @@ instances:
 - id:       settings
   module:   shellprocess
   config:   shellprocess_settings.conf
+- id:       system
+  module:   shellprocess
+  config:   shellprocess_system.conf
 
 sequence:
 - show:
@@ -34,6 +37,7 @@ sequence:
   - luksbootkeyfile
   - initcpiocfg
   - shellprocess@settings
+  - shellprocess@system
   - packages
   - removeuser
   - shellprocess@preuser
