--- a/src/modules/shellprocess/shellprocess_system.conf
+++ b/src/modules/shellprocess/shellprocess_system.conf
@@ -10,12 +10,13 @@ script:
     - "-cp -rf /etc/systemd @@ROOT@@/etc"
     - "-cp -rf /etc/udev/rules.d @@ROOT@@/etc/udev"
     - "-cp -rf /etc/X11/xorg.conf.d @@ROOT@@/etc/X11"
-    - "-cp -rf /etc/xdg @@ROOT@@/etc/xdg"
+    - "-cp -rf /etc/xdg @@ROOT@@/etc"
     - "-cp -rf /etc/motd @@ROOT@@/etc"
     - "-cp -rf /etc/ntp.conf @@ROOT@@/etc"
     - "-cp -rf /etc/pamac.conf @@ROOT@@/etc"
     - '-echo "QT_QPA_PLATFORMTHEME=qt5ct" >> @@ROOT@@/etc/environment'
     - '-echo "FONT=cyr-sun16" >> @@ROOT@@/etc/vconsole.conf'
+    - "-cp -rf /usr/local/bin/cleaner.sh @@ROOT@@/usr/local/bin"
     - "-cp -rf /usr/local/bin/multilock.sh @@ROOT@@/usr/local/bin"
     - "-cp -rf /usr/local/bin/show_desktop @@ROOT@@/usr/local/bin"
     - "-cp -rf /usr/local/bin/vbox-check @@ROOT@@/usr/local/bin"
