--- a/src/modules/shellprocess/shellprocess_system.conf
+++ b/src/modules/shellprocess/shellprocess_system.conf
@@ -10,7 +10,7 @@ script:
     - "-cp -rf /etc/systemd @@ROOT@@/etc"
     - "-cp -rf /etc/udev/rules.d @@ROOT@@/etc/udev"
     - "-cp -rf /etc/X11/xorg.conf.d @@ROOT@@/etc/X11"
-    - "-cp -rf /etc/xdg @@ROOT@@/etc"
+    - "-cp -rf /etc/xdg/reflector @@ROOT@@/etc/xdg"
     - "-cp -rf /etc/motd @@ROOT@@/etc"
     - "-cp -rf /etc/ntp.conf @@ROOT@@/etc"
     - "-cp -rf /etc/pamac.conf @@ROOT@@/etc"
