--- a/src/modules/shellprocess/shellprocess_system.conf
+++ b/src/modules/shellprocess/shellprocess_system.conf
@@ -16,6 +16,8 @@ script:
     - "-cp -rf /etc/pamac.conf @@ROOT@@/etc"
     - '-echo "QT_QPA_PLATFORMTHEME=qt5ct" >> @@ROOT@@/etc/environment'
     - '-echo "FONT=cyr-sun16" >> @@ROOT@@/etc/vconsole.conf'
+    - "-cp -rf /root/.config @@ROOT@@/root"
+    - "-cp -rf /root/.gtkrc-2.0 @@ROOT@@/root"
     - "-cp -rf /usr/local/bin/cleaner.sh @@ROOT@@/usr/local/bin"
     - "-cp -rf /usr/local/bin/multilock.sh @@ROOT@@/usr/local/bin"
     - "-cp -rf /usr/local/bin/show_desktop @@ROOT@@/usr/local/bin"
