--- a/src/modules/shellprocess/shellprocess_system.conf
+++ b/src/modules/shellprocess/shellprocess_system.conf
@@ -4,7 +4,7 @@ timeout: 120
 script:
     - "-cp -rf /etc/default @@ROOT@@/etc"
     - "-cp -rf /etc/modprobe.d @@ROOT@@/etc"
-    - "-cp -rf /etc/pacman.d/gnupg @@ROOT@@/etc/pacman.d"
+    - "-cp -rf /etc/pacman.d/gnupg/gpg.conf @@ROOT@@/etc/pacman.d/gnupg"
     - "-cp -rf /etc/pacman.d/hooks @@ROOT@@/etc/pacman.d"
     - "-cp -rf /etc/sysctl.d @@ROOT@@/etc"
     - "-cp -rf /etc/systemd @@ROOT@@/etc"
@@ -22,3 +22,5 @@ script:
     - "-cp -rf /usr/local/bin/multilock.sh @@ROOT@@/usr/local/bin"
     - "-cp -rf /usr/local/bin/show_desktop @@ROOT@@/usr/local/bin"
     - "-cp -rf /usr/local/bin/vbox-check @@ROOT@@/usr/local/bin"
+    - "-cp -rf /usr/share/icons/default @@ROOT@@/usr/share/icons"
+    - "-cp -rf /usr/share/icons/linebit @@ROOT@@/usr/share/icons"
