--- a/src/modules/shellprocess/shellprocess_system.conf
+++ b/src/modules/shellprocess/shellprocess_system.conf
@@ -2,25 +2,4 @@
 dontChroot: true
 timeout: 120
 script:
-    - "-cp -rf /etc/default @@ROOT@@/etc"
-    - "-cp -rf /etc/modprobe.d @@ROOT@@/etc"
-    - "-cp -rf /etc/pacman.d/gnupg/gpg.conf @@ROOT@@/etc/pacman.d/gnupg"
-    - "-cp -rf /etc/pacman.d/hooks @@ROOT@@/etc/pacman.d"
-    - "-cp -rf /etc/sysctl.d @@ROOT@@/etc"
-    - "-cp -rf /etc/systemd @@ROOT@@/etc"
-    - "-cp -rf /etc/udev/rules.d @@ROOT@@/etc/udev"
-    - "-cp -rf /etc/X11/xorg.conf.d @@ROOT@@/etc/X11"
-    - "-cp -rf /etc/xdg/reflector @@ROOT@@/etc/xdg"
-    - "-cp -rf /etc/motd @@ROOT@@/etc"
-    - "-cp -rf /etc/ntp.conf @@ROOT@@/etc"
-    - "-cp -rf /etc/pamac.conf @@ROOT@@/etc"
-    - '-echo "QT_QPA_PLATFORMTHEME=qt5ct" >> @@ROOT@@/etc/environment'
-    - '-echo "FONT=cyr-sun16" >> @@ROOT@@/etc/vconsole.conf'
-    - "-cp -rf /root/.config @@ROOT@@/root"
-    - "-cp -rf /root/.gtkrc-2.0 @@ROOT@@/root"
-    - "-cp -rf /usr/local/bin/cleaner.sh @@ROOT@@/usr/local/bin"
-    - "-cp -rf /usr/local/bin/multilock.sh @@ROOT@@/usr/local/bin"
-    - "-cp -rf /usr/local/bin/show_desktop @@ROOT@@/usr/local/bin"
-    - "-cp -rf /usr/local/bin/vbox-check @@ROOT@@/usr/local/bin"
-    - "-cp -rf /usr/share/icons/default @@ROOT@@/usr/share/icons"
-    - "-cp -rf /usr/share/icons/linebit @@ROOT@@/usr/share/icons"
+    - "-/usr/local/bin/system.sh"
