--- a/settings-online.conf
+++ b/settings-online.conf
@@ -13,6 +13,9 @@ instances:
 - id:       system
   module:   shellprocess
   config:   shellprocess_system.conf
+- id:       postinstall
+  module:   shellprocess
+  config:   shellprocess_postinstall.conf
 
 sequence:
 - show:
@@ -43,6 +46,7 @@ sequence:
   - shellprocess@preuser
   - users
   - hwclock
+  - shellprocess@postinstall
   - shellprocess
   - displaymanager
   - grubcfg
