--- a/settings-online.conf
+++ b/settings-online.conf
@@ -4,15 +4,18 @@
 modules-search: [ local ]
 
 instances:
-- id:       preuser
+- id:       prechroot
   module:   shellprocess
-  config:   shellprocess_preuser.conf
+  config:   shellprocess_prechroot.conf
 - id:       settings
   module:   shellprocess
   config:   shellprocess_settings.conf
 - id:       system
   module:   shellprocess
   config:   shellprocess_system.conf
+- id:       preuser
+  module:   shellprocess
+  config:   shellprocess_preuser.conf
 - id:       postinstall
   module:   shellprocess
   config:   shellprocess_postinstall.conf
@@ -39,6 +42,7 @@ sequence:
   - luksopenswaphookcfg
   - luksbootkeyfile
   - initcpiocfg
+  - shellprocess@prechroot
   - shellprocess@settings
   - shellprocess@system
   - packages
