--- a/src/modules/shellprocess/shellprocess_prechroot.conf
+++ b/src/modules/shellprocess/shellprocess_prechroot.conf
@@ -2,4 +2,5 @@
 dontChroot: true
 timeout: 60
 script:
-    - "cp -r /etc/resolv.conf @@ROOT@@/etc/resolv.conf"
+    - "-rm -rf @@ROOT@@/etc/resolv.conf"
+    - "cp -rfL /etc/resolv.conf @@ROOT@@/etc/resolv.conf"
