--- a/src/modules/packages/packages-offline.conf
+++ b/src/modules/packages/packages-offline.conf
@@ -4,6 +4,11 @@ skip_if_no_internet: false
 update_db: false
 update_system: false
 
+pacman:
+  num_retries: 0
+  disable_download_timeout: false
+  needed_only: true
+
 operations:
   - try_remove:
     - calamares-dev
