--- a/src/modules/shellprocess/shellprocess.conf
+++ b/src/modules/shellprocess/shellprocess.conf
@@ -3,8 +3,8 @@ dontChroot: false
 timeout: 60
 script:
     - "-/usr/local/bin/cleaner.sh"
-    # - "-su @@USER@@ -c 'xdg-user-dirs-gtk-update --force'"
-    # - "-touch @@ROOT@@/tmp/thingy"
+    # - "-su ${USER} -c 'xdg-user-dirs-gtk-update --force'"
+    # - "-touch ${ROOT}/tmp/thingy"
     # - "/usr/bin/false"
     # - command: "/usr/local/bin/slowloris"
       # timeout: 3600
